@@ -6,6 +6,7 @@ from sql import Cast, Literal, Null
 from sql.functions import Substring, Position
 from sql.conditionals import Coalesce
 
+from trytond.pyson import PYSONEncoder
 from .field import (Field, size_validate, instanciate_values, domain_validate,
     search_order_validate, context_validate)
 from ...pool import Pool
@@ -437,3 +438,18 @@ class Many2Many(Field):
         query_table = convert_from(None, relation_tables)
         query = query_table.select(origin, where=expression)
         return table.id.in_(query)
+
+    def definition(self, model, language):
+        encoder = PYSONEncoder()
+        definition = super().definition(model, language)
+        definition['add_remove'] = encoder.encode(self.add_remove)
+        definition['datetime_field'] = self.datetime_field
+        if self.filter:
+            definition['domain'] = encoder.encode(
+                ['AND', self.domain, self.filter])
+        definition['relation'] = self.get_target().__name__
+        definition['search_context'] = encoder.encode(self.search_context)
+        definition['search_order'] = encoder.encode(self.search_order)
+        definition['sortable'] &= hasattr(model, 'order_' + self.name)
+        definition['size'] = encoder.encode(self.size)
+        return definition
