@@ -6,7 +6,7 @@ from functools import total_ordering
 
 from trytond.model import fields
 from trytond.pool import Pool, PoolBase, PoolMeta
-from trytond.pyson import PYSONEncoder
+from trytond.pyson import PYSONEncoder, PYSONDecoder
 from trytond.transaction import Transaction
 from trytond.url import URLMixin
 from trytond.rpc import RPC
@@ -158,7 +158,7 @@ class Model(URLMixin, PoolBase, metaclass=ModelMeta):
         """
         Return the definition of each field on the model.
         """
-        res = {}
+        definition = {}
         pool = Pool()
         Translation = pool.get('ir.translation')
         FieldAccess = pool.get('ir.model.field.access')
@@ -167,186 +167,38 @@ class Model(URLMixin, PoolBase, metaclass=ModelMeta):
         # Add translation to cache
         language = Transaction().language
         trans_args = []
-        for field in (x for x in cls._fields.keys()
-                if ((not fields_names) or x in fields_names)):
-            trans_args.append((cls.__name__ + ',' + field, 'field', language,
-                None))
-            trans_args.append((cls.__name__ + ',' + field, 'help', language,
-                None))
-            if hasattr(cls._fields[field], 'selection'):
-                if (isinstance(cls._fields[field].selection, (tuple, list))
-                        and ((hasattr(cls._fields[field],
-                                    'translate_selection')
-                                and cls._fields[field].translate_selection)
-                            or not hasattr(cls._fields[field],
-                                'translate_selection'))):
-                    sel = cls._fields[field].selection
-                    for (key, val) in sel:
-                        trans_args.append((cls.__name__ + ',' + field,
-                            'selection', language, val))
+        for fname, field in cls._fields.items():
+            if fields_names and fname not in fields_names:
+                continue
+            trans_args.extend(field.definition_translations(cls, language))
         Translation.get_sources(trans_args)
 
         encoder = PYSONEncoder()
+        decoder = PYSONDecoder(noeval=True)
 
         accesses = FieldAccess.get_access([cls.__name__])[cls.__name__]
-        for field in (x for x in cls._fields.keys()
-                if ((not fields_names) or x in fields_names)):
-            res[field] = {
-                'type': cls._fields[field]._type,
-                'name': field,
-                }
-            for arg in (
-                    'string',
-                    'readonly',
-                    'states',
-                    'size',
-                    'required',
-                    'translate',
-                    'help',
-                    'select',
-                    'on_change',
-                    'add_remove',
-                    'on_change_with',
-                    'autocomplete',
-                    'sort',
-                    'datetime_field',
-                    'loading',
-                    'filename',
-                    'selection_change_with',
-                    'domain',
-                    'converter',
-                    'search_order',
-                    'search_context',
-                    ):
-                if getattr(cls._fields[field], arg, None) is not None:
-                    value = getattr(cls._fields[field], arg)
-                    if isinstance(value, set):
-                        value = list(value)
-                    else:
-                        value = copy.copy(value)
-                    res[field][arg] = value
+        for fname, field in cls._fields.items():
+            if fields_names and fname not in fields_names:
+                continue
+            definition[fname] = field.definition(cls, language)
             if not accesses.get(field, {}).get('write', True):
-                res[field]['readonly'] = True
-                if res[field].get('states') and \
-                        'readonly' in res[field]['states']:
-                    del res[field]['states']['readonly']
-            for arg in ('digits', 'invisible'):
-                if hasattr(cls._fields[field], arg) \
-                        and getattr(cls._fields[field], arg):
-                    res[field][arg] = copy.copy(getattr(cls._fields[field],
-                        arg))
-            if ((isinstance(cls._fields[field],
-                            (fields.Function, fields.One2Many,
-                                fields.Many2Many))
-                        and not getattr(cls, 'order_%s' % field, None))
-                    or not hasattr(cls, 'search')):
-                res[field]['sortable'] = False
-            if ((isinstance(cls._fields[field], fields.Function)
-                        and not (cls._fields[field].searcher
-                            or getattr(cls, 'domain_%s' % field, None)))
-                    or (cls._fields[field]._type in ('binary', 'sha'))
-                    or not hasattr(cls, 'search')):
-                res[field]['searchable'] = False
-            else:
-                res[field]['searchable'] = True
+                definition[fname]['readonly'] = True
+                states = decoder.decode(definition[fname]['states'])
+                states.pop('readonly', None)
+                definition[fname]['states'] = encoder.encode(states)
+            for right in ['create', 'delete']:
+                definition[fname][right] = accesses.get(
+                    fname, {}).get(right, True)
 
-            if Transaction().context.get('language'):
-                # translate the field label
-                res_trans = Translation.get_source(
-                    cls.__name__ + ',' + field, 'field',
-                    Transaction().context['language'])
-                if res_trans:
-                    res[field]['string'] = res_trans
-                help_trans = Translation.get_source(
-                    cls.__name__ + ',' + field, 'help',
-                    Transaction().context['language'])
-                if help_trans:
-                    res[field]['help'] = help_trans
-
-            if hasattr(cls._fields[field], 'selection'):
-                if isinstance(cls._fields[field].selection, (tuple, list)):
-                    sel = copy.copy(cls._fields[field].selection)
-                    if (Transaction().context.get('language')
-                            and ((hasattr(cls._fields[field],
-                                        'translate_selection')
-                                    and cls._fields[field].translate_selection)
-                                or not hasattr(cls._fields[field],
-                                    'translate_selection'))):
-                        # translate each selection option
-                        sel2 = []
-                        for (key, val) in sel:
-                            val2 = Translation.get_source(
-                                cls.__name__ + ',' + field, 'selection',
-                                language, val)
-                            sel2.append((key, val2 or val))
-                        sel = sel2
-                    res[field]['selection'] = sel
-                else:
-                    # call the 'dynamic selection' function
-                    res[field]['selection'] = copy.copy(
-                            cls._fields[field].selection)
-            if res[field]['type'] in (
-                    'one2many',
-                    'many2many',
-                    'many2one',
-                    'one2one',
-                    ):
-                if hasattr(cls._fields[field], 'model_name'):
-                    relation = copy.copy(cls._fields[field].model_name)
-                else:
-                    relation = copy.copy(
-                        cls._fields[field].get_target().__name__)
-                res[field]['relation'] = relation
-                res[field]['context'] = copy.copy(cls._fields[field].context)
-                res[field]['create'] = accesses.get(field, {}).get('create',
-                    True)
-                res[field]['delete'] = accesses.get(field, {}).get('delete',
-                    True)
-            if res[field]['type'] == 'one2many' \
-                    and getattr(cls._fields[field], 'field', None):
-                res[field]['relation_field'] = copy.copy(
-                        cls._fields[field].field)
-            if res[field]['type'] == 'many2one':
-                target = cls._fields[field].get_target()
-                relation_fields = []
-                for target_name, target_field in target._fields.items():
-                    if (target_field._type == 'one2many'
-                            and target_field.model_name == cls.__name__
-                            and target_field.field == field):
-                        relation_fields.append(target_name)
-                # Set relation_field only if there is no ambiguity
-                if len(relation_fields) == 1:
-                    res[field]['relation_field'], = relation_fields
-            if res[field]['type'] in ('datetime', 'time', 'timestamp'):
-                res[field]['format'] = copy.copy(cls._fields[field].format)
-            if res[field]['type'] == 'selection':
-                res[field]['context'] = copy.copy(cls._fields[field].context)
-            if res[field]['type'] == 'dict':
-                res[field]['schema_model'] = cls._fields[field].schema_model
-                res[field]['domain'] = copy.copy(cls._fields[field].domain)
-                res[field]['context'] = copy.copy(cls._fields[field].context)
-                res[field]['create'] = accesses.get(field, {}).get('create',
-                    True)
-                res[field]['delete'] = accesses.get(field, {}).get('delete',
-                    True)
-            filter_ = getattr(cls._fields[field], 'filter', None)
-            if filter_:
-                res[field]['domain'] = ['AND', res[field]['domain'], filter_]
-
-            # convert attributes into pyson
-            for attr in ('states', 'domain', 'context', 'digits', 'size',
-                    'add_remove', 'format', 'search_order', 'search_context'):
-                if attr in res[field]:
-                    res[field][attr] = encoder.encode(res[field][attr])
-
-        for i in list(res.keys()):
+        for fname in list(definition.keys()):
             # filter out fields which aren't in the fields_names list
             if fields_names:
-                if i not in fields_names:
-                    del res[i]
-            elif not ModelAccess.check_relation(cls.__name__, i, mode='read'):
-                del res[i]
-        return res
+                if fname not in fields_names:
+                    del definition[fname]
+            elif not ModelAccess.check_relation(
+                    cls.__name__, fname, mode='read'):
+                del definition[fname]
+        return definition
 
     def pre_validate(self):
         pass
